# Kern

./: .gitignore  Frontend Phases.md  Kern PRD.md  README.md  SESSION_OPENER.md  package-lock.json  package.json  pnpm-lock.yaml
.cursor/rules/: kern-project.mdc
.github/workflows/: desktop-build.yml
apps/desktop/: package.json
apps/desktop/scripts/: tauri-build.mjs
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/ios/Kern/: build_output.txt
apps/tui/: .env  .env.example  go.mod  go.sum  main.go
apps/tui/cmd/: root.go
apps/web/: .env.example  KERN_PRD_SPEC.md  Phases.md  README.md  SESSION_OPENER.md  index.html  index.ts  package.json  tailwind.config.ts  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/supabase/: config.toml
kern/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
kern/scripts/: kern-mcp-bridge.mjs
kern/src/: App.tsx  babel-standalone.d.ts  constants.ts  index.css  main.tsx
kern/src/hooks/: useCollections.ts  useCommandRegistry.tsx  useCustomViews.ts  useDashboard.ts  useFileUpload.ts  useFileUrl.ts  useRadixDataStateOpen.ts  useRows.ts  useViews.ts
kern/src/lib/: animations.ts  apply-filters.ts  collectionIcon.ts  constants.ts  custom-view-compile.ts  custom-view-examples.ts  custom-view-types.ts  dashboard-grid.ts  edge-function-help.ts  (+9 more)
kern/supabase/: config.toml
(+325 files in other folders)
