[package]
name = "kern-desktop"
version = "0.1.0"
description = "Kern desktop application"
authors = ["you"]
edition = "2021"

[lib]
name = "kern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
